Name:            Expresso
Version:         0.1
Cabal-Version:   >= 1.6
License:         GPL-3
License-File:    LICENSE
Author:          Tim Williams
Maintainer:      info@timphilipwilliams.com
Stability:       Experimental
Synopsis:        A simple expressions language based on row types
Build-Type:      Simple

Library
  Hs-Source-Dirs:  src
  Build-Depends:   base, containers, hashable, mtl, parsec, wl-pprint,
                   unordered-containers, haskeline, directory, filepath
  Exposed-Modules: Expresso
  Other-Modules:   Expresso.Parser
                   Expresso.Eval,
                   Expresso.Type,
                   Expresso.InferType,
                   Expresso.Syntax,
                   Expresso.Pretty,
                   Expresso.Utils

  ghc-options: -O2 -Wall -fwarn-tabs -funbox-strict-fields
               -fno-warn-orphans
               -fno-warn-unused-do-bind
               -fno-warn-name-shadowing
               -fno-warn-missing-pattern-synonym-signatures

Executable Expresso
  Main-Is:         Repl.hs
  Hs-Source-Dirs:  src
  Other-Modules:   Expresso.Parser
                   Expresso.Eval,
                   Expresso.Type,
                   Expresso.InferType,
                   Expresso.Syntax,
                   Expresso.Pretty,
                   Expresso.Utils

  ghc-options: -O2 -threaded -rtsopts -Wall -fwarn-tabs -funbox-strict-fields
               -fno-warn-orphans
               -fno-warn-unused-do-bind
               -fno-warn-name-shadowing
               -fno-warn-missing-pattern-synonym-signatures
