Name:            expresso
Version:         0.1
Cabal-Version:   >= 1.8
License:         GPL-3
License-File:    LICENSE
Author:          Tim Williams
Maintainer:      info@timphilipwilliams.com
Stability:       Experimental
Synopsis:        A simple expressions language based on row types
Build-Type:      Simple

Library
  Hs-Source-Dirs:  src
  Build-Depends:   base, containers, hashable, mtl, mtl-compat, void, transformers, parsec, wl-pprint,
                   unordered-containers, haskeline, directory, filepath
  Exposed-Modules: Expresso
  Other-Modules:   Expresso.Parser
                   Expresso.Eval
                   Expresso.Type
                   Expresso.TypeCheck
                   Expresso.Syntax
                   Expresso.Pretty
                   Expresso.Utils

  ghc-options: -O2 -Wall -fwarn-tabs -funbox-strict-fields
               -fno-warn-orphans
               -fno-warn-unused-do-bind
               -fno-warn-name-shadowing
               -fno-warn-name-shadowing
               -fno-warn-missing-pattern-synonym-signatures

Executable expresso
  Main-Is:         Repl.hs
  Hs-Source-Dirs:  src
  Build-Depends:   base, containers, hashable, mtl, mtl-compat, void, transformers, parsec, wl-pprint,
                   unordered-containers, haskeline, directory, filepath
  Other-Modules:   Expresso.Parser
                   Expresso.Eval
                   Expresso.Type
                   Expresso.TypeCheck
                   Expresso.Syntax
                   Expresso.Pretty
                   Expresso.Utils
                   Expresso

  ghc-options: -O2 -threaded -rtsopts -Wall -fwarn-tabs -funbox-strict-fields
               -fno-warn-orphans
               -fno-warn-unused-do-bind
               -fno-warn-name-shadowing
              --  -fno-warn-missing-pattern-synonym-signatures

Test-Suite test-expresso
  Type:            exitcode-stdio-1.0
  Main-Is:         Tests.hs
  Hs-Source-Dirs:  src
  Build-Depends:   base, containers, hashable, mtl, parsec, wl-pprint,
                   unordered-containers, haskeline, directory, filepath,
                   expresso, tasty, tasty-hunit
