Name:            expresso
Version:         0.1
Cabal-Version:   >= 1.8
License:         BSD3
License-File:    LICENSE
Author:          Tim Williams
Maintainer:      info@timphilipwilliams.com
Stability:       Experimental
Synopsis:        A simple expressions language based on row types
Category:        Configuration
Description:
    Expresso is a minimal statically-typed functional programming language, designed with embedding and/or extensibility in mind.
    .
    Possible use cases for such a minimal language include configuration (à la Nix), data exchange (à la JSON) or even a starting point for a custom external DSL.
    .
    Please refer to the README in the source repository for more details.
Build-Type:      Simple

Source-Repository head
  Type: git
  Location: https://github.com/willtim/Expresso

Library
  Hs-Source-Dirs:  src
  Build-Depends:   base, containers, hashable, mtl, parsec, wl-pprint, text,
                   unordered-containers, haskeline, directory, filepath
  Exposed-Modules: Expresso
  Other-Modules:   Expresso.Parser
                   Expresso.Eval
                   Expresso.Type
                   Expresso.TypeCheck
                   Expresso.Syntax
                   Expresso.Pretty
                   Expresso.Utils
  ghc-options:     -Wall -fwarn-tabs -funbox-strict-fields
                   -fno-warn-orphans
                   -fno-warn-unused-do-bind
                   -fno-warn-name-shadowing
                   -fno-warn-missing-pattern-synonym-signatures

Executable expresso
  Main-Is:         Repl.hs
  Hs-Source-Dirs:  src
  Build-Depends:   base, containers, hashable, mtl, parsec, wl-pprint, text,
                   unordered-containers, haskeline, directory, filepath
  Other-Modules:   Expresso.Parser
                   Expresso.Eval
                   Expresso.Type
                   Expresso.TypeCheck
                   Expresso.Syntax
                   Expresso.Pretty
                   Expresso.Utils
                   Expresso

  ghc-options: -threaded -rtsopts -Wall -fwarn-tabs -funbox-strict-fields
               -fno-warn-orphans
               -fno-warn-unused-do-bind
               -fno-warn-name-shadowing
               -fno-warn-missing-pattern-synonym-signatures

Test-Suite test-expresso
  Type:            exitcode-stdio-1.0
  Main-Is:         Tests.hs
  Hs-Source-Dirs:  src
  Build-Depends:   base, containers, hashable, mtl, parsec, wl-pprint, text,
                   unordered-containers, haskeline, directory, filepath,
                   expresso, tasty, tasty-hunit
  Other-Modules:   Expresso
                   Expresso.Eval
                   Expresso.Parser
                   Expresso.Pretty
                   Expresso.Syntax
                   Expresso.Type
                   Expresso.TypeCheck
                   Expresso.Utils
