Name:            expresso
Version:         0.1.2.2
Cabal-Version:   >= 1.10
License:         BSD3
License-File:    LICENSE
Author:          Tim Williams
Maintainer:      info@timphilipwilliams.com
Stability:       Experimental
Synopsis:        A simple expressions language based on row types
Category:        Configuration
Description:
    Expresso is a minimal statically-typed functional programming language, designed with embedding and/or extensibility in mind.
    .
    Possible use cases for such a minimal language include configuration (à la Nix), data exchange (à la JSON) or even a starting point for a custom external DSL.
    .
    Please refer to README.md for more information.
Build-Type:      Simple
Bug-Reports:     https://github.com/willtim/Expresso/issues
Data-Files:
    Prelude.x
    List.x
    Text.x
Data-Dir:
    lib
Extra-Source-Files:
    CHANGELOG.md
    README.md

Source-Repository head
  Type: git
  Location: https://github.com/willtim/Expresso

Library
  Hs-Source-Dirs:   src
  Default-Language: Haskell2010
  Build-Depends:    base                 >= 4.11.1 && < 5,
                    containers           >= 0.5.11 && < 0.7,
                    directory            >= 1.3.1 && < 1.4,
                    filepath             >= 1.4.2 && < 1.5,
                    hashable             >= 1.2.7 && < 1.3,
                    text                 >= 1.2.3 && < 1.3,
                    haskeline            >= 0.7.4 && < 0.8,
                    mtl                  >= 2.2.2 && < 2.3,
                    parsec               >= 3.1.13 && < 3.2,
                    template-haskell     >= 2.13.0 && < 2.15,
                    unordered-containers >= 0.2.9 && < 0.3,
                    wl-pprint            >= 1.2.1 && < 1.3

  Exposed-Modules:  Expresso
                    Expresso.TH.QQ
  Other-Modules:    Expresso.Parser
                    Expresso.Eval
                    Expresso.Type
                    Expresso.TypeCheck
                    Expresso.Syntax
                    Expresso.Pretty
                    Expresso.Utils

  ghc-options:      -Wall -fwarn-tabs -funbox-strict-fields
                    -fno-warn-orphans
                    -fno-warn-unused-do-bind
                    -fno-warn-name-shadowing
                    -fno-warn-missing-pattern-synonym-signatures

Executable expresso
  Main-Is:          Repl.hs
  Hs-Source-Dirs:   src
  Default-Language: Haskell2010
  Build-Depends:    base, containers, hashable, mtl, parsec, wl-pprint, text,
                    unordered-containers, haskeline, directory, filepath

  Other-Modules:    Expresso.Parser
                    Expresso.Eval
                    Expresso.Type
                    Expresso.TypeCheck
                    Expresso.Syntax
                    Expresso.Pretty
                    Expresso.Utils
                    Expresso
                    Paths_expresso

  ghc-options: -threaded -rtsopts -Wall -fwarn-tabs -funbox-strict-fields
               -fno-warn-orphans
               -fno-warn-unused-do-bind
               -fno-warn-name-shadowing
               -fno-warn-missing-pattern-synonym-signatures

Test-Suite test-expresso
  Type:             exitcode-stdio-1.0
  Main-Is:          Tests.hs
  Hs-Source-Dirs:   src
  Default-Language: Haskell2010

  Build-Depends:    base, containers, hashable, mtl, parsec, wl-pprint, text,
                    unordered-containers, haskeline, directory, filepath,
                    expresso, tasty, tasty-hunit

  Other-Modules:    Expresso
                    Expresso.Eval
                    Expresso.Parser
                    Expresso.Pretty
                    Expresso.Syntax
                    Expresso.Type
                    Expresso.TypeCheck
                    Expresso.Utils
                    Paths_expresso